--- a/styles.css
+++ b/styles.css
@@ -307,4 +307,33 @@ button.menu-toggle:hover {
         margin-bottom: 0;
     }
 
-    .experience
+    .experience-item div, .education-item div {
+        text-align: left;
+    }
+}
+
+/* Skills and Interests Sections */
+#skills h3, #funSkills h3 {
+    margin-top: 1.5rem;
+}
+
+ul {
+    list-style-type: disc;
+    padding-left: 1rem;
+    margin-top: 0.5rem;
+}
+
+li {
+    margin-bottom: 0.5rem;
+}
+
+/* New sections styling */
+#certifications, #languages {
+    margin-top: 2rem;
+}
+
+#certifications ul, #languages ul {
+    list-style-type: disc;
+    padding-left: 1rem;
+    margin-top: 0.5rem;
+}
