--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@ body {
     background-color: #f0f0f0;
     margin: 0;
     transition: background-color 0.3s ease;
-    text-align: left; /* Ensure alll text is left-aligned by default */
 }
 
 .container {
@@ -17,7 +16,6 @@ body {
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     position: relative;
-    text-align: left; /* Reinforce left alignment for container content */
 }
 
 h1, h2, h3 {
@@ -27,12 +25,7 @@ h1, h2, h3 {
 
 h2 {
     margin-top: 2rem;
-    margin-bottom: 1.5rem; /* Increase spacing below the header */
-    border-bottom: 2px solid #ccc; /* Thicker border for more prominence */
-    padding-bottom: 0.5rem;
-    font-size: 1.75rem; /* Increase font size */
-    font-weight: bold; /* Ensure bold text */
-    color: #333; /* Consistent color */
+    border-bottom: 1px solid #ccc;
 }
 
 /* Non-sticky header for experience items */
@@ -43,7 +36,6 @@ h2 {
 
 .experience-item .sticky-header h3 {
     margin: 0;
-    font-size: 1.5em; /* Match your h3 style */
 }
 
 .experience-item .date-range {
@@ -58,11 +50,6 @@ h2 {
     font-size: 1em;
     color: #666;
     margin-top: 0.25rem;
-}
-
-/* Ensure h3 headers in Skills section are not sticky */
-#skills h3 {
-    position: static; /* Override any inherited stickiness */
 }
 
 .contact p {
@@ -109,7 +96,6 @@ h2 {
 
 .theme-dark h2 {
     border-color: #777;
-    color: #f0f0f0; /* Adjust color for dark mode */
 }
 
 .theme-dark .experience-item .sticky-header {
@@ -345,35 +331,16 @@ button.menu-toggle:hover {
     display: flex;
     margin-top: 1.5rem;
     align-items: center;
-    flex-direction: column;
 }
 
 .experience-item img, .education-item img {
     max-width: 100px;
-    margin-bottom: 1rem;
+    margin-right: 1rem;
     filter: brightness(0.9);
 }
 
 .experience-item div, .education-item div {
     flex: 1;
-    text-align: left; /* Left-align text in experience and education items */
-}
-
-/* For screens wider than 768px */
-@media (min-width: 768px) {
-    .experience-item, .education-item {
-        flex-direction: row;
-        align-items: flex-start;
-    }
-
-    .experience-item img, .education-item img {
-        margin-right: 1rem;
-        margin-bottom: 0;
-    }
-
-    .experience-item div, .education-item div {
-        text-align: left; /* Ensure left alignment on desktop */
-    }
 }
 
 /* Skills and Interests Sections */
@@ -385,7 +352,6 @@ ul {
     list-style-type: disc;
     padding-left: 1rem;
     margin-top: 0.5rem;
-    text-align: left; /* Ensure lists are left-aligned */
 }
 
 li {
@@ -401,7 +367,6 @@ li {
     list-style-type: disc;
     padding-left: 1rem;
     margin-top: 0.5rem;
-    text-align: left; /* Ensure lists are left-aligned */
 }
 
 /* Back to Top Button */
